--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.6",
+    "@heroicons/react": "^2.1.5",
     "next": "^14.2.8",
     "next-intl": "^3.9.1",
     "react": "^18",
